book managment system

--- a/views/view.ejs
+++ b/views/view.ejs
@@ -45,9 +45,7 @@
             <a href="/deleteBook?did=<%= val.id %>" class="btn btn-danger">
               Delete
             </a>
-            <a href="/editBook>eid=?<%= val.id %>" class="btn btn-primary"
-              >Edit</a
-            >
+            <a href="/edit?eid=<%= val.id %>" class="btn btn-primary">Edit</a>
           </td>
         </tr>
         <%})%>
